--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -34,3 +34,15 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: Authenticate with GitHub
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          echo "Authenticating with GitHub"
+          git config --global user.name init-iator
+          git config --global user.email emuhnas1@hotmail.com
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+
+      - name: running pwd
+        run: pwd
