--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Merge main to dev and RC
 
 # Controls when the workflow will run
 on:
@@ -34,3 +34,15 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Authenticate with GitHub
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          echo "Authenticating with GitHub"
+          git config --global user.name init-iator
+          git config --global user.email emuhnas1@hotmail.com
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+
+      - name: run versioning
+        run: python /home/runner/work/GitFlowEgen/GitFlowEgen/merging.py
