--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -44,5 +44,5 @@ jobs:
           git config --global user.email emuhnas1@hotmail.com
           git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
 
-      - name: run versioning
+      - name: run merging
         run: python /home/runner/work/GitFlowEgen/GitFlowEgen/merging.py
